# air-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/app/: app.py  schema.py
src/app/ai/: __init__.py  chain.py  prompts.py
src/app/ai/parsers/: __init__.py
src/app/ai/tools/: __init__.py  ask_pretrained.py  get_air_quality.py  locate_user.py
src/app/rest/air/: router.py  service.py
src/app/weatherapi/: api.py  util.py
src/ui/: .env.example  .gitignore  Dockerfile  README.md  index.html  package.json
src/ui/src/: App.vue
src/ui/src/assets/: main.scss  reset.scss  variables.scss
src/ui/src/components/: AirAiResultView.vue  ErrorState.vue  GreetingText.vue  LoadingState.vue  LogoHeader.vue  PromptInput.vue  UnavailableLocation.vue  ViewOnGithub.vue
src/ui/src/components/AirQualityCard/: AirQualityCard.util.ts  AirQualityCard.vue  AirQualityCardBars.vue
src/ui/src/components/Icons/: GithubIcon.vue  SpinnerIcon.vue
src/ui/src/util/: api.ts  date.ts  location.ts  log.ts  math.ts  schema.ts  text.ts
src/ui/src/views/: MainView.vue
